<resources>
    <string name="app_name">Golden Health</string>
    <string name="map_api_key" translatable="false">AIzaSyADrLQwP_Yiy9uTysImY06BRKo-AJqf5B4</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="facebook_app_id">599693143774224</string>
    <string name="fb_login_protocol_scheme">fb599693143774224</string>
    <string name="appID">2392616877766551705</string>
    <string name="khaosat_infor">Bằng việc bỏ ra 3 phút để khảo sát, bạn sẽ giúp chúng tôi\nhoàn thiện sản phẩm của mình
        hơn
    </string>
    <string name="home">Trang chủ</string>
    <string name="question">Hỏi đáp</string>
    <string name="setting">Cài đặt</string>
    <string name="contact">Danh bạ</string>
    <string name="enter_email_or_phone">Nhập Email hoặc số điện thoại</string>
    <string name="email_phone">Email/SĐT</string>
    <string name="send_request">GỬI YÊU CẦU</string>
    <string name="wrong_password">Sai mật khẩu! Thử lại.</string>
    <string name="username">Tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="register">Đăng ký</string>
    <string name="forget_password">Quên mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="enter_password_again">Nhập lại mật khẩu</string>
    <string name="confirm">XÁC NHẬN</string>
    <string name="success">Thành công!</string>
    <string name="done">XONG</string>
    <string name="fail">Không thành công!</string>
    <string name="try_again">THỬ LẠI</string>
    <string name="name">Họ tên</string>
    <string name="birthday">Ngày sinh</string>
    <string name="phone_email">SĐT/Email</string>
    <string name="i_agree_with_policy">
        <u>Tôi đồng ý với điều khoản sử dụng</u>
    </string>
    <string name="have_an_account_login">
        <u>Đã có tài khoản?</u>
    </string>
    <string name="send_again">
        <u>Gửi lại</u>
    </string>
    <string name="continuee">TIẾP TỤC</string>
    <string name="register_success">Đăng ký tài khoản thành công!</string>
    <string name="enter_link_sent_your_email">Nhấn vào link xác thực được gửi về Email của bạn</string>
    <string name="verify_phone">Xác thực số điện thoại</string>
    <string name="verify_email">Xác thực Email</string>
    <string name="search">Tìm kiếm</string>
    <string name="health_records">Hồ sơ\nsức khỏe</string>
    <string name="personal_information">Thông tin\ncá nhân</string>
    <string name="add">Thêm</string>
    <string name="medical_exam_schedule">Lịch sử khám\nchữa bệnh</string>
    <string name="hotline">Đường\ndây nóng</string>
    <string name="blood_group">Nhóm máu</string>
    <string name="height">Chiều cao</string>
    <string name="weight">Cân nặng</string>
    <string name="children">TRẺ EM</string>
    <string name="woman">PHỤ NỮ</string>
    <string name="elderly">NGƯỜI CAO TUỔI</string>
    <string name="total">TỔNG SỐ HỘ</string>
    <string name="advanced_search">Tìm kiếm nâng cao</string>
    <string name="filter_criteria">Các tiêu chí lọc</string>
    <string name="save">LƯU</string>
    <string name="personal_info">Thông tin cá nhân</string>
    <string name="gender">Giới tính</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="profile">Hồ sơ cá nhân</string>
    <string name="change_pasword">Đổi mật khẩu</string>
    <string name="health_profile">Hồ sơ sức khỏe</string>
    <string name="basic_information">Thông tin cơ bản</string>
    <string name="height_cm">Chiều cao (cm)</string>
    <string name="weight_kg">Cân nặng (kg)</string>
    <string name="allergy_info">Thông tin dị ứng</string>
    <string name="drug">Thuốc</string>
    <string name="chemicals_cosmetics">Hóa chất/Mỹ phẩm</string>
    <string name="food">Thực phẩm</string>
    <string name="other">Khác</string>
    <string name="diseases">Bệnh</string>
    <string name="risk_history">Tiền sử nguy cơ</string>
    <string name="surgery_history">Tiền sử phẫu thuật</string>
    <string name="part">Bộ phận</string>
    <string name="family_history">Tiền sử gia đình</string>
    <string name="allergy">Dị ứng</string>
    <string name="diseasess">Bệnh tật</string>
    <string name="de_thuong">Đẻ thường</string>
    <string name="de_thieu_thang">Đẻ thiếu tháng</string>
    <string name="de_mo">Đẻ mổ</string>
    <string name="bi_ngat_luc_de">Bị ngạt lúc đẻ</string>
    <string name="can_nang_luc_de">Cân nặng lúc đẻ (kg):</string>
    <string name="chieu_dai_luc_de">Chiều dài lúc đẻ (cm):</string>
    <string name="di_tat_bam_sinh">Dị tật bẩm sinh:</string>
    <string name="van_de_khac">Vấn đề khác</string>
    <string name="hut_thuoc_la_thuoc_lao">Hút thuốc lá, thuốc lào</string>
    <string name="uong_ruou_bia_thuong_xuyen">Uống rượu bia thường xuyên</string>
    <string name="su_dung_ma_tuy">Sử dụng ma túy</string>
    <string name="hoat_dong_the_luc">Hoạt động thể lực</string>
    <string name="yeu_to_tiep_xuc_nghe_nghiep">Yếu tố tiếp xúc nghề nghiệp/ Môi trường song (Hóa chất, bụi, ồn,
        viruts,...) ghi rõ yếu tố tiếp xúc:
    </string>
    <string name="thoi_gian_tiep_xuc">Thời gian tiếp xúc</string>
    <string name="year">năm</string>
    <string name="loai_ho_xi">Loại hố xí của gia đình</string>
    <string name="nguy_co_nghe_nghiep">Nguy cơ nghề nghiệp</string>
    <string name="nguy_co_khac">Nguy cơ khác</string>
    <string name="thong_tin_benh_tat">Thông tin bệnh tật</string>
    <string name="benh_tim_mach">Bệnh tim mạch</string>
    <string name="dai_thao_duong">Đái tháo đường</string>
    <string name="benh_phoi_man_tinh">Bệnh phổi mãn tính</string>
    <string name="benh_buou_co">Bệnh bướu cổ</string>
    <string name="tim_bam_sinh">Tim bẩm sinh</string>
    <string name="tu_ky">Tự kỷ</string>
    <string name="tang_huyet_ap">Tăng huyết áp</string>
    <string name="benh_da_day">Bệnh dạ dày</string>
    <string name="hen_suyen">Hen suyễn</string>
    <string name="viem_gan">Viêm gan</string>
    <string name="dong_kinh">Động kinh</string>
    <string name="thong_tin_di_ung">Thông tin dị ứng</string>
    <string name="loai">Loại</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="mo_ta">Mô tả</string>
    <string name="hoa_chat_my_pham">Hóa chất/Mỹ phẩm</string>
    <string name="thinh_luc">Thính lực</string>
    <string name="thi_luc">Thị lực</string>
    <string name="tay">Tay</string>
    <string name="chan">Chân</string>
    <string name="khe_ho_moi_vom_mieng">Khe hở môi, vòm miệng</string>
    <string name="bo_phan_phau_thuat">Bộ phận phẫu thuật</string>
    <string name="nam_phau_thuat">Năm phẫu thuật</string>
    <string name="noi_phau_thuat">Nơi thực hiện phẫu thuật</string>
    <string name="phone">SĐT</string>
    <string name="email">Email</string>
    <string name="enter_name">Vui lòng nhập họ tên!</string>
    <string name="enter_birthday">Vui lòng nhập ngày sinh!</string>
    <string name="enter_phone">Vui lòng nhập số điện thoại!</string>
    <string name="enter_password">Vui lòng nhập mật khẩu</string>
    <string name="enter_password_again_">Vui lòng nhập lại mật khẩu</string>
    <string name="password_not_match">Mật khẩu và nhập lại mật khẩu không trùng nhau. Vui lòng nhập lại</string>
    <string name="username_is_exist">Tên đăng nhập đã tồn tại!</string>
    <string name="phone_is_exist">Số điện thoại đã tồn tại</string>
    <string name="email_is_exist">Email đã tồn tại!</string>
    <string name="verify_code_is_sent">Mã xác nhận được gửi về SĐT hoặc Email của bạn</string>
    <string name="enter_username">Vui lòng nhập tên đăng nhập!</string>
    <string name="username_or_password_incorrect">Tên đăng nhập hoặc mật khẩu không đúng!</string>
    <string name="login_success">Đăng ký thành công!</string>
    <string name="change_password_success">Đổi mật khẩu thành công!</string>
    <string name="resend_after">Gửi lại sau</string>
    <string name="app_info">Thông tin ứng dụng</string>
    <string name="on_off_notifi">Bật tắt thông báo</string>
    <string name="language">Ngôn ngữ</string>
    <string name="policy">Điều khoản sử dụng</string>
    <string name="logout">Đăng xuất</string>
    <string name="dan_toc">Dân tộc</string>
    <string name="CMND">Số CMND/CCCD</string>
    <string name="ngay_cap">Ngày cấp</string>
    <string name="noi_cap">Nơi cấp</string>
    <string name="ma_y_te_ca_nhan">Mã y tế cá nhân</string>
    <string name="ma_ho_gia_dinh">Mã hộ gia đình</string>
    <string name="ten_chu_ho">Tên chủ hộ</string>
    <string name="quan_he_voi_chu_ho">Quan hệ với chủ hộ</string>
    <string name="ma_BHYT">Mã định danh BHYT/ Số thẻ BHYT</string>
    <string name="tinh_dang_ky_khai_sinh">Tỉnh/TP đăng ký khai sinh</string>
    <string name="quoc_tich">Quốc tịch</string>
    <string name="ton_giao">Tôn giáo</string>
    <string name="dia_chi_hien_tai">Địa chỉ hiện tại</string>
    <string name="dia_chi_thuong_tru">Địa chỉ thường trú</string>
    <string name="dien_thoai_co_dinh">Điện thoại cố định</string>
    <string name="dien_thoai_di_dong">Điện thoại di động</string>
    <string name="ho_ten_bo">Họ tên bố</string>
    <string name="ma_y_te_bo">Mã y tế bố</string>
    <string name="ho_ten_me">Họ tên mẹ</string>
    <string name="ma_y_te_me">Mã y tế mẹ</string>
    <string name="ho_ten_nguoi_cs_chinh">Họ tên người C/S chính</string>
    <string name="moi_quan_he">Mối quan hệ</string>
    <string name="dtcd_nguoi_cs_chinh">ĐTCĐ người C/S chính</string>
    <string name="dtdd_nguoi_cs_chinh">ĐTDĐ người C/S chính</string>
    <string name="trinh_do_hoc_van">Trình độ học vấn</string>
    <string name="tinh_trang_hon_nhan">Tình trạng hôn nhân</string>
    <string name="undefined">Chưa xác định</string>
    <string name="update_sucsess">Cập nhật thành công!</string>
    <string name="da_bo">Đã bỏ</string>
    <string name="su_dung_thuong_xuyen">Sử dụng thường xuyên</string>
    <string name="hut_thuong_xuyen">Hút thường xuyên</string>
    <string name="ung_thu_ghi_ro_loai">Ung thư (ghi rõ loại ung thư):</string>
    <string name="lao_ghi_ro_loai">Lao (ghi rõ loại lao):</string>
    <string name="khac_neu_ro">Khác (nêu rõ)</string>
    <string name="tom_tat_thong_tin">Tóm tắt thông tin</string>
    <string name="yeu_to_nguy_co">Yếu tố nguy cơ</string>
    <string name="tinh_trang_luc_sinh">Tình trạng lúc sinh</string>
    <string name="tien_su_benh_tat">Tiền sử bệnh tật</string>
    <string name="khuyet_tat">Khuyết tật</string>
    <string name="tien_su_phau_thuat">Tiền sử phẫu thuật</string>
    <string name="tien_su_gia_dinh">Tiền sử gia đình</string>
    <string name="them_thanh_cong">Thêm thành công!</string>
    <string name="stt">STT</string>
    <string name="laoi_di_ung">Loại dị ứng</string>
    <string name="nguoi_mac">Người mắc</string>
    <string name="ten_benh">Tên bệnh</string>
    <string name="them_tien_su_phau_thuat">Thêm tiền sử phẫu thuật</string>
    <string name="them_tien_su_di_ung">Thêm tiền sử dị ứng</string>
    <string name="enter_old_pass">Nhập mật khẩu cũ</string>
    <string name="enter_new_pass">Nhập mật khẩu mới</string>
    <string name="confirm_new_password">Xác nhận mật khẩu mới</string>
    <string name="enter_new_pass_again">Nhập lại mật khẩu mới</string>
    <string name="old_pass">Đổi mật khẩu</string>
    <string name="tiep_tuc">Tiếp tục</string>
    <string name="dien_thoai">Điện thoại</string>
    <string name="ten_dang_nhap">Tên đăng nhập</string>
    <string name="ma_bac_si">Mã bác sĩ</string>
    <string name="dia_chi">Địa chỉ</string>
    <string name="csyt_lam_viec">Cơ sở y tế làm việc</string>
    <string name="dien_thong_tin_lien_he">Điền thông tin liên hệ</string>
    <string name="hoac">Hoặc</string>
    <string name="chua_co_tai_khoan">Chưa có tài khoản? Đăng ký.</string>
    <string name="register_account">Đăng ký tài khoản</string>
    <string name="dang_nhap">Đăng nhập</string>
</resources>