<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
>

    <RelativeLayout
            android:id="@+id/view_title"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/background">

        <ImageView
                android:id="@+id/btn_back"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_4sdp"
                android:src="@drawable/ic_left_arrow_sign"/>


        <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/segoeui"
                android:textSize="20sp"
                android:text="@string/change_pasword"
                android:layout_centerInParent="true"/>
    </RelativeLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoeui"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/old_pass"
    />

    <EditText
            android:id="@+id/edt_old_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:backgroundTint="@color/grey"
            android:hint="@string/enter_old_pass"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:fontFamily="@font/segoeui"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoeui"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/new_password"
    />

    <EditText
            android:id="@+id/edt_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:backgroundTint="@color/grey"
            android:hint="@string/enter_new_pass"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:fontFamily="@font/segoeui"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoeui"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/confirm_new_password"
    />

    <EditText
            android:id="@+id/edt_new_pass_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:backgroundTint="@color/grey"
            android:hint="@string/enter_new_pass_again"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:fontFamily="@font/segoeui"
    />

    <TextView
            android:id="@+id/btn_save"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_42sdp"
            android:background="@drawable/bg_button_primary"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/save"
            android:gravity="center"
            android:fontFamily="@font/segoeui"
            android:elevation="@dimen/_2sdp"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/btn_register"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_gravity="right"
    />

</LinearLayout>